[gd_scene load_steps=22 format=2]

[ext_resource path="res://assets/game_objects/Ladder Animation/Ladder Animation7.png" type="Texture" id=1]
[ext_resource path="res://scenes_two/Ladder.gd" type="Script" id=2]
[ext_resource path="res://assets/game_objects/Ladder Animation/Ladder Animation14.png" type="Texture" id=3]
[ext_resource path="res://assets/game_objects/Ladder Animation/Ladder Animation5.png" type="Texture" id=4]
[ext_resource path="res://assets/game_objects/Ladder Animation/Ladder Animation12.png" type="Texture" id=5]
[ext_resource path="res://assets/game_objects/Ladder Animation/Ladder Animation13.png" type="Texture" id=6]
[ext_resource path="res://assets/game_objects/Ladder Animation/Ladder Animation8.png" type="Texture" id=7]
[ext_resource path="res://assets/game_objects/Ladder Animation/Ladder Animation6.png" type="Texture" id=8]
[ext_resource path="res://assets/game_objects/Ladder Animation/Ladder Animation3.png" type="Texture" id=9]
[ext_resource path="res://assets/game_objects/Ladder Animation/Ladder Animation4.png" type="Texture" id=10]
[ext_resource path="res://assets/game_objects/Ladder Animation/Ladder Animation1.png" type="Texture" id=11]
[ext_resource path="res://assets/game_objects/Ladder Animation/Ladder Animation11.png" type="Texture" id=12]
[ext_resource path="res://assets/game_objects/Ladder Animation/Ladder Animation2.png" type="Texture" id=13]
[ext_resource path="res://assets/game_objects/Ladder Animation/Ladder Animation9.png" type="Texture" id=14]
[ext_resource path="res://assets/game_objects/Ladder Animation/Ladder Animation10.png" type="Texture" id=15]
[ext_resource path="res://assets/game_objects/Ladder Animation/Ladder Animation16.png" type="Texture" id=16]
[ext_resource path="res://assets/game_objects/Ladder Animation/Ladder Animation17.png" type="Texture" id=17]
[ext_resource path="res://assets/game_objects/Ladder Animation/Ladder Animation15.png" type="Texture" id=18]
[ext_resource path="res://UI_Scenes/ObjectLabel.tscn" type="PackedScene" id=19]

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 11 ), ExtResource( 13 ), ExtResource( 9 ), ExtResource( 10 ), ExtResource( 4 ), ExtResource( 8 ), ExtResource( 1 ), ExtResource( 7 ), ExtResource( 14 ), ExtResource( 15 ), ExtResource( 12 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 3 ), ExtResource( 18 ), ExtResource( 16 ), ExtResource( 17 ) ],
"loop": true,
"name": "glow",
"speed": 10.0
} ]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 56, 183.5 )

[node name="Ladder" type="TextureButton"]
margin_left = -65.0
margin_top = -153.0
margin_right = 52.0
margin_bottom = 145.0
rect_min_size = Vector2( 117, 320 )
rect_pivot_offset = Vector2( 66, 157 )
script = ExtResource( 2 )

[node name="LadderAnim" type="AnimatedSprite" parent="."]
unique_name_in_owner = true
position = Vector2( 57, 169 )
frames = SubResource( 2 )
animation = "glow"
frame = 5
playing = true

[node name="Ladder" type="Area2D" parent="."]
position = Vector2( 60, 149 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Ladder"]
position = Vector2( -3, 11.5 )
shape = SubResource( 1 )

[node name="ObjectInfo" parent="." instance=ExtResource( 19 )]
unique_name_in_owner = true
margin_left = -47.0
margin_top = -31.0
margin_right = -7.0
margin_bottom = 9.0

[node name="Reminder" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 5.0
one_shot = true

[connection signal="body_entered" from="Ladder" to="." method="_on_Ladder_body_entered"]
[connection signal="body_exited" from="Ladder" to="." method="_on_Ladder_body_exited"]
[connection signal="timeout" from="Reminder" to="." method="_on_Reminder_timeout"]
